# r-saas-app

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.docs/: initial-plan.md  (+5 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ed7ae417d004_initial_schema.py
backend/app/: main.py
backend/app/api/: auth.py  clients.py  dashboard.py  invoices.py  payments.py  properties.py  property_service_types.py  service_types.py  tenants.py  users.py
backend/app/core/: config.py  dependencies.py  exceptions.py  pagination.py  tenant.py
backend/app/database/: __init__.py  base.py
backend/app/database/migrations/: env.py
backend/app/dto/: __init__.py  auth.py  client.py  common.py  invoice.py  payment.py  property.py  property_service_type.py  service_type.py  tenant.py  user.py
backend/app/models/: __init__.py  base.py  role.py  tenant.py  user.py
backend/app/schemas/: auth.py  tenant.py  user.py
backend/app/services/: auth_service.py  client_service.py  invoice_service.py  payment_service.py  property_service.py  property_service_type_service.py  service_type_service.py  tenant_service.py  user_service.py
backend/app/utils/: logging.py  security.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_tenants.py  test_users.py
backend/tests/integration/: conftest.py  test_clients.py  test_invoices.py  test_payments.py  test_properties.py  test_property_service_types.py  test_service_types.py  test_tenants.py  test_users.py
backend/tests/unit/: test_dtos.py  test_security.py
(+115 files in other folders)
